[gd_scene load_steps=4 format=3 uid="uid://bndbct351q3xq"]

[ext_resource type="Script" path="res://HUD.gd" id="1_sog2c"]

[sub_resource type="InputEventAction" id="InputEventAction_xd235"]
action = &"Start_Game"

[sub_resource type="Shortcut" id="Shortcut_td6od"]
events = [SubResource("InputEventAction_xd235")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sog2c")

[node name="Score_Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.5
offset_right = 41.5
offset_bottom = 55.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -27.5
offset_right = 163.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Kill the mobs!"
horizontal_alignment = 1

[node name="Message_Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start_Button" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.5
offset_top = -125.0
offset_right = 93.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 40
shortcut = SubResource("Shortcut_td6od")
text = "Start"

[connection signal="timeout" from="Message_Timer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
